--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -1,9 +1,13 @@
-flask==2.3.3
-flask-cors==4.0.0
-torch==2.7.0
-transformers==4.35.0
-opencv-python-headless==4.8.1.78
-pillow==10.0.1
-onnxruntime==1.16.3
-numpy==1.24.3
-gunicorn==21.2.0
+--index-url https://download.pytorch.org/whl/cpu
+torch==2.4.1+cpu
+torchvision==0.19.1+cpu
+torchaudio==2.4.1+cpu
+--index-url https://pypi.org/simple
+flask==3.0.3
+flask-cors==5.0.0
+transformers==4.45.3
+opencv-python-headless==4.10.0.84
+pillow==10.4.0
+numpy==2.1.1
+gunicorn==23.0.0
+onnxruntime==1.22.0
