--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -1,5 +1,5 @@
 --index-url https://download.pytorch.org/whl/cpu
-torch==2.7.0+cpu
+torch==2.7.0
 torchvision==0.19.1+cpu
 torchaudio==2.4.1+cpu
 --index-url https://pypi.org/simple
